# echoclip

./: .gitignore  README.md  config.example.toml  main.py  pyproject.toml  verify.py
docs/: architecture.md
docs/genai/: text-to-speech.md
echoclip/: assets.py  audio.py  client.py  config.py  input_handler.py  keys.py  logger.py  main.py  service.py
src/: assets.py  audio.py  client.py  input_handler.py  keys.py  service.py
